# Vocksel

./: .gitignore  CMakeLists.txt  LICENSE  README.md
assets/shaders/Core/: basic.fs.glsl  basic.vs.glsl  normals.fs.glsl  normals.vs.glsl
assets/shaders/Core/Debug/: line.vs.glsl
assets/shaders/Core/World/: marching_cubes.comp.glsl  world.fs.glsl  world.vs.glsl
assets/shaders/core/: basic.fs.glsl  normals.vs.glsl
include/Vocksel/: application.h  camera.h  chunk.h  constants.h  creature.h  creature_segment.h  cube.h  engine_services.h  input_manager.h  mesh_object.h  model.h  model_manager.h  player.h  resource_manager.h  shader.h  sphere.h  static_mesh.h  texture.h  texture_atlas.h  world.h
include/Vocksel/Core/: application.h  constants.h  engine_services.h  game.h  input_manager.h
include/Vocksel/Core/Debug/: debug_gui.h  debug_renderer.h
include/Vocksel/Entities/: creature.h  creature_segment.h  player.h
include/Vocksel/Entities/Creature/: creature.h  creature_segment.h  leg_chain.h  leg_segment.h
include/Vocksel/Entities/Debug/: leg_creature.h
include/Vocksel/Graphics/: camera.h  shader.h  texture.h  texture_3d.h  texture_atlas.h
include/Vocksel/Graphics/Mesh/: compute_mesh.h  mesh_object.h  model.h  model_instance.h  static_mesh.h
include/Vocksel/Resources/: model_manager.h  resource_manager.h
include/Vocksel/World/: chunk.h  density_field.h  marching_cubes.h  mc_lookup.h  world.h
include/glad/: glad.h
src/: application.cpp  camera.cpp  chunk.cpp  creature.cpp  creature_segment.cpp  cube.cpp  cube.h  engine_services.cpp  input_manager.cpp  main.cpp  mesh_object.cpp  model.cpp  model_manager.cpp  player.cpp  resource_manager.cpp  shader.cpp  shader.h  sphere.cpp  static_mesh.cpp  texture.cpp  texture_atlas.cpp  world.cpp
src/Core/: application.cpp  engine_services.cpp  game.cpp  input_manager.cpp
src/Core/Debug/: debug_gui.cpp  debug_renderer.cpp
src/Entities/: creature.cpp  creature_segment.cpp  player.cpp
src/Entities/Creature/: creature.cpp  creature_segment.cpp  leg_chain.cpp  leg_segment.cpp
src/Entities/Creature/Debug/: leg_creature.cpp
src/Graphics/: camera.cpp  shader.cpp  texture.cpp  texture_3d.cpp
src/Graphics/Mesh/: compute_mesh.cpp  mesh_object.cpp  model.cpp  model_instance.cpp  static_mesh.cpp
src/Resources/: model_manager.cpp  resource_manager.cpp  texture_atlas.cpp
src/World/: chunk.cpp  density_field.cpp  marching_cubes.cpp  world.cpp
